--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,14 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="star_wars">Star Wars</string>
     <string name="Home">Home</string>
+    <string name="orbital_period">Orbital Period</string>
+    <string name="rotation_period">Rotation Period</string>
+    <string name="terrain">Terrain</string>
+    <string name="diameter">Diameter</string>
+    <string name="surface_water">Surface Water</string>
+    <string name="population">Population</string>
+    <string name="gravity">Gravity</string>
+    <string name="climate">Climate</string>
+    <string name="name">Name</string>
+    <string name="home_planet">Home Planet:</string>
 </resources>
